work on some spacing issues. Will need to re-align things and clean up some widgets later on

--- a/src/gamePage.css
+++ b/src/gamePage.css
@@ -1,3 +1,7 @@
+#root {
+    height: 96vh;
+}
+
 img {
     max-width: 100%;
 }
